--- a/assets/afcp-style.css
+++ b/assets/afcp-style.css
@@ -41,3 +41,36 @@
 	color: #4e4e4e;
 	line-height: 1;
 }
+
+.event-form .error {
+	font-size: 12px;
+	color: red;
+	font-style: italic;
+}
+
+.alert {
+	display: inline-block;
+	padding: 1em 1em;
+	font-size: 0.875em;
+	text-align: center;
+	color: white;
+	position: fixed;
+	bottom: 20px;
+	z-index: 1000;
+	/*left: -280px;*/
+	width: 280px;
+	-webkit-animation: slide 0.5s forwards;
+	-webkit-animation-delay: 2s;
+	animation: slide 0.5s forwards;
+	animation-delay: 1s;
+	box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.4);
+	box-sizing: border-box;
+}
+
+.alert-success {
+	background-color: #4CAF50;
+}
+
+.alert-danger {
+	background-color: #F44336;
+}
